working on auth and user
