# docs/swagger.yaml
@@ -60,6 +60,32 @@ paths:
       summary: Login a user
       tags:
       - Auth
+  /api/v1/auth/logout:
+    post:
+      description: Clear user authentication cookies
+      produces:
+      - application/json
+      responses: {}
+      summary: Logout a user
+      tags:
+      - Auth
+  /api/v1/auth/refresh:
+    post:
+      consumes:
+      - application/json
+      description: Generate a new access token using a refresh token
+      parameters:
+      - description: Refresh Token
+        in: header
+        name: refresh_token
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Refresh Access Token
+      tags:
+      - Auth
   /api/v1/auth/register:
     post:
       consumes:
